# CGP_project

./: .gitignore  CMakeLists.txt  README.md  launchVSjson.txt
include/: Utils.hpp
src/: CMakeLists.txt  Utils.cpp  main.cpp  main_ex_2_1.cpp  main_ex_2_2.cpp  main_ex_2_3.cpp  main_ex_2_4.cpp  main_ex_3_1.cpp  main_ex_3_3.cpp  main_ex_4_1.cpp  main_ex_4_2.cpp  main_ex_4_2_quaternions.cpp  main_prog_3_1.cpp  main_prog_4_1.cpp  main_prog_4_1_2.cpp  main_prog_4_2.cpp  main_prog_4_3.cpp  main_prog_4_4.cpp
src/shaders/: fragShader.glsl  fragShaderProg4_1.glsl  fragShaderProg4_2.glsl  vertShaderEx2_2.glsl  vertShaderEx3_1.glsl  vertShaderEx3_3.glsl  vertShaderProg4_1.glsl  vertShaderProg4_2.glsl
